--- a/install
+++ b/install
@@ -8,6 +8,27 @@ DOTBOT_DIR="submodules/dotbot"
 DOTBOT_BIN="bin/dotbot"
 BASEDIR="$(cd "$(dirname "${BASH_SOURCE[0]}")" && pwd)"
 
+function os_release() {
+	if [ -f /etc/os-release ]; then
+		# load the os-release file
+		. /etc/os-release
+
+		case "$ID" in
+		ubuntu)
+			CONFIG="ubuntu.conf.yaml"
+			;;
+		arch)
+			CONFIG="arch.conf.yaml"
+			;;
+		esac
+
+		echo "OS: $ID"
+		echo "CONF: $CONFIG"
+	fi
+}
+
+os_release
+
 cd "${BASEDIR}"
 git -C "${DOTBOT_DIR}" submodule sync --quiet --recursive
 git submodule update --init --recursive "${DOTBOT_DIR}"
